prep: update fstab.yaml

--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,5 @@
 mountpoints:
   /: https://drive.google.com/drive/u/0/folders/189YWnXNSFJH0ehuzsR0iGuabEHEcvT7j
+mountpoints:
+  /: https://drive.google.com/drive/folders/1Hz_B47z1t4VDh0YQ6t-HOhwJd1mmoK2e
+
